--- a/Style/index.css
+++ b/Style/index.css
@@ -8,12 +8,13 @@
     text-align: center;
     background-color: #f5f5f5;
     margin: 0;
-    padding: 50px;
+    padding: 2vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100vw;
+    width: 98vw;
+    box-sizing: border-box;
   }
   
   .visualizador-container {
@@ -31,16 +32,15 @@
     grid-template-columns: repeat(4, 1fr);
     gap: 30px;
     justify-items: center;
-    margin-top: 20px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0;
+    box-sizing: border-box;
   }
   
   .item {
     background: white;
     border-radius: 10px;
     padding: 15px;
-    width: 19vw;
+    width: 18vw;
     height: 25vw;
     transition: transform 0.3s;
     text-decoration: none;
